logs/prod_v4_6311218.err
Traceback (most recent call last):
  File "/home/fallah/scripts/ESMB/experiments/control_run.py", line 20, in <module>
    from chronos_esm import main  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/fallah/scripts/ESMB/chronos_esm/main.py", line 417
    kappa_bi=kappa_bi,
    ^^^^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: kappa_bi
